edit home, contact, project, and about --> Done

--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -1,11 +1,11 @@
 body {
     background-color: darksalmon;
-    background-image: url("../images/nen.jpg");
+    background-image: url("https://source.unsplash.com/category/sky");
     background-size: cover;
 }
 
 #container {
-    margin: 10 auto;
+    margin: 0 auto;
     opacity: 0.8;
 }
 
@@ -14,10 +14,35 @@ header {
     /*height: 500px;*/
     background-color: blue;
     border: 1px black dashed;
-    margin-right: auto;
-    margin-left: auto;
-    background-color: white;
+    margin: 0 auto;
     font-size: 24px;
+    background-image: url("../images/top-cover.jpg");
+    background-size: 750px;
+}
+
+header h1 {
+    font-size: 100px;
+    font-family: cursive;
+    color: #160410;
+    text-align: center;
+}
+
+#id-neg #square {
+    list-style-type: none;
+    border-radius: 2.5px;
+    padding: 1px;
+    display: inline;
+    margin-right: 10px;
+    font-size: 30px;
+    font-family: content: '\e822';
+    color: black;
+    border: solid #EB1435 3px;
+    text-align: center;
+}
+
+h2 {
+    margin: 10px;
+    color: black;
 }
 
 main {
@@ -26,18 +51,45 @@ main {
     border: 1px black dotted;
     margin: 0;
     font-family: "rubik";
-    color: darkgreen;
+    color: green;
     display: block;
     margin-left: auto;
     margin-right: auto;
     background-color: floralwhite;
 }
 
+#contact #background-contact {
+    width: 700px;
+    height: 300px;
+    background-image: url("../images/contact-fifteendesign.jpg");
+    background-size: 500px;
+    list-style-type: none;
+    text-align: center;
+
+}
+
 main h1 {
     font-size: 50px;
     font-family: cursive;
-    color: darkgray;
+    color: black;
     text-align: center;
+}
+
+main p {
+    text-align: center;
+}
+
+main ul {
+    border: 1px black dotted;
+}
+
+main img {
+    width: 50px;
+    height: 50px;
+}
+
+#main-css {
+    font-size: 50px;
 }
 
 footer {
@@ -47,78 +99,56 @@ footer {
     margin: 0 auto;
     margin-left: auto;
     margin-right: auto;
-    font-family: "rubik"
-        color: darkgreen;
-    background-color: #F8EFBA;
-}
-
-header h1 {
-    font-size: 100px;
-    font-family: cursive;
-    color: darkgray;
-    text-align: center;
+    font-family: "rubik";
+    color: darkgreen;
+    background-color: #606D9F;
 }
 
 footer p {
     font-size: 35px;
     font-family: content: '\e003';
-    color: darkblue;
-    text-align: center;
+    color: black;
 }
 
 #logo img {
-    border-radius: 50%;
+    border-radius: 25%;
 }
 
-a {
-    font-size: 36;
-    font-family: "arial";
-    color: darkblue;
-    text-align: center;
-}
-
-#hello-image img {
-    width: 700px;
+#hello-image #portrait {
     border-radius: 25px;
-    text-align: 0 center;
+    width: 200px;
+    height: 200px;
+}
+
+#hello {
+    border-radius: 25px;
+    width: 700px;
+    height: 700px;
 }
 
 #para {
     text-align: center;
-    background-color: red;
     width: 700px;
 }
 
-ul {
-    list-style-type: none;
-}
-
-li {
-    border-radius: 5px;
-    padding: 10px;
-    display: inline;
-    margin-right: 20px;
-    font-size: 36px;
-    font-family: "Arial";
-    color: #3B3B98;
-    border: solid #ff793f 2px;
+#resume {
+    color: green;
 }
 
 a:link {
-    color: #ff5252;
+    color: blue;
     text-decoration: none;
-
 }
 
 a:visited {
-    color: fuchsia;
+    color: black;
 }
 
 a:hover {
-    color: blue;
+    color: #0DEAF2;
     text-decoration: underline;
 }
 
 a:active {
-    color: yellow;
+    color: #1B1DE4;
 }
