--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -27,7 +27,7 @@ header h1 {
     text-align: center;
 }
 
-#id-neg #square {
+#id-nevigate #square {
     list-style-type: none;
     border-radius: 2.5px;
     padding: 1px;
